--- a/ngMeditationTracker/src/app/app.component.html
+++ b/ngMeditationTracker/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-meditation-list></app-meditation-list>
+<nav class="navbar navbar-dark bg-primary mb-4">
+    <div class="container">
+      <a href="#" class="navbar-brand">Home</a>
+      <a href="#" class="navbar-brand">Meditations</a>
+      <a href="#" class="navbar-brand">Feeling Lucky?</a>
+    </div>
+  </nav>
+  <app-meditation-list></app-meditation-list>
