--- a/ngMeditationTracker/src/app/app.component.html
+++ b/ngMeditationTracker/src/app/app.component.html
@@ -1,8 +1,2 @@
-<nav class="navbar navbar-dark bg-primary mb-4">
-    <div class="container">
-      <a href="#" class="navbar-brand">Home</a>
-      <a href="#" class="navbar-brand">Meditations</a>
-      <a href="#" class="navbar-brand">Feeling Lucky?</a>
-    </div>
-  </nav>
-  <app-meditation-list></app-meditation-list>
+<app-meditation-list></app-meditation-list>
+<router-outlet></router-outlet>
